Fix card styles spacing

--- a/templates/modules/project-card/_style.scss
+++ b/templates/modules/project-card/_style.scss
@@ -17,10 +17,6 @@ project-card {
 
 }
 
-project-card:last-of-type {
-	padding-bottom: 0;
-}
-
 .project-detail {
 	margin-top: var(--simple-space);
 }
